# falken-knowledge-base

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
docs/: DEPLOY_STREAMLIT_CLOUD.md  IDEAS_60_REPORT.md  IDEAS_60_v2_REPORT.md  MANAGEMENT_SUMMARY.md  NIGHT_REPORT_2026-05-18.md  PHASE9_FINAL_REPORT.md  TECHNICAL_OVERVIEW.md  V4_TESTS_REPORT.md  data-sources.md  graph-model.md  horst_agent_architecture.excalidraw  horst_architecture.excalidraw
falken_kb/: __init__.py  config.py  db.py  logging_setup.py  validation.py
falken_kb/genai/: dgx_client.py  orchestrator.py  router.py  smoke_test.py  (+3 more)
frontend/: falken_ui.py  streamlit_app.py
scripts/: backfill_goalie_stats.py  backfill_oberliga_playoffs.py  bootstrap_current_season.py  compute_standings_from_games.py  cross_source_diff.py  fix_playoff_league_assignment.py  fix_seasons_metadata.py  full_workflow.py  generate_ground_truth.py  merge_known_duplicates.py  render_results_md.py  run_all_ground_truth.py  run_genai_tests.py  run_ideas_60.py  run_migrations.py  test_tool_agent.py  wikipedia_full_backfill.py
tests/: genai_pilot.json  genai_pilot2.json  genai_questions.yaml  genai_results.json  genai_results_smoke.json  genai_results_v1.json  genai_results_v2.json  genai_results_v3b_dgx.json  genai_results_v4.json  genai_results_v4_partial.json  genai_test_questions.py  ground_truth.yaml  ground_truth_auto.yaml  ideas_60.yaml  ideas_60_results.json  ideas_60_results_v1.json  tool_agent_results.json
(+29 files in other folders)
