[project]
name = "falken-knowledge-base"
version = "0.1.0"
description = "GenAI-Wissensdatenbank für die Heilbronner Falken (Eishockey)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "supabase>=2.9",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "feedparser>=6.0",
    "openai>=1.50",
    "rapidfuzz>=3.10",
    "pyyaml>=6.0",
    "streamlit>=1.39",
    "pandas>=2.2",
    "altair>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
